# rust-make

./: Cargo.toml  device-api.docx  ~$数据库.docx  数据库.docx
.cargo/: config
.github/workflows/: build-win.yaml  buildl.yaml  buildw.yaml
data/: data.db
src/: config.rs  error.rs  main.rs
src/serve/: conn.rs  handler.rs  io.rs  manager.rs  mod.rs  other.rs  proto.rs  sync.rs
src/serve/api/: mod.rs
src/serve/frame/: codec.rs  mod.rs  recv.rs  send.rs
src/store/: mod.rs
src/store/sql/: bill.rs  coin.rs  device.rs  mod.rs
src/utils/: codec.rs  mod.rs
src/web/: mod.rs  req.rs  resp.rs
src/web/api/: mod.rs
src/web/api/device/: bill.rs  coin.rs  mod.rs
