[package]
name = "orange-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true



[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_cbor = "0.11.2"
thiserror = "1.0.56"
serde_bytes = "0.11.14"
dashmap = "5.5.3"
rand = "0.8.5"